# Variational_Quantum_Eigensolver

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  PROBLEM.md  README.md  RESEARCH.md  RESULTS.md  THEORY.md  USAGE.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
common/: __init__.py  benchmarks.py  environment.py  geometry.py  hamiltonian.py  lazy.py  metrics.py  molecule_viz.py  molecules.py  mpl_env.py  naming.py  noise.py  paths.py  persist.py  plotting.py  problem.py  units.py
docs/: api.rst  architecture.md  conf.py  index.html  index.md  research.md  styles.css
more_docs/: architecture.md
notebooks/: BENCHMARK_ROADMAP.md  CO_Length_VQE.ipynb  H2O_Bond_Angle.ipynb  H2O_Noiseless.ipynb  H2O_VQE_Noiseless.ipynb  H2_Ansatz_Comparison.ipynb  H2_Bond_Length.ipynb  H2_Noiseless.ipynb  H2_Noisy.ipynb  H2_Noisy_vs_Noiseless.ipynb  H2_VQE_Noiseless.ipynb  H3+_Mapping_Comparison.ipynb  H3+_Noiseless.ipynb  H3+_Noisy.ipynb  H3+_SSVQE.ipynb  H3plus_Noisy.ipynb  H3plus_Noisy_vs_Noiseless.ipynb  H3plus_SSVQE.ipynb  LiH_Bond_Length.ipynb  LiH_Noiseless.ipynb  LiH_VQE_Noiseless.ipynb  LiH_VQE_Noiseless.ipynb.ipynb  README_notebooks.md  RESULTS.md  Water_Angle_VQE.ipynb  qpe_utils.py  vqe_noiseless.ipynb  vqe_utils.py
package results/: H2_Adam_s0__0ce98f816ace.json  H2_Adam_s0__25f91f5e425f.json  H2_Adam_s0__2ea7e62ed6c7.json  H2_Adam_s0__3c048f75db7a.json  H2_Adam_s0__7c67cdf1df63.json  H2_Adam_s0__8f706d2f939d.json  H2_Adam_s0__947161402ef8.json  H2_Adam_s0__dacf845caf6e.json  H2_Adam_s0__f65e0c5cc744.json  H2_Adam_s0__ff6ca84ce3a2.json  H2_BOND_Adam_s0__0e261fab0049.json  H2_BOND_Adam_s0__94e85324f7c6.json  H2_BOND_Adam_s0__b84e032ecb56.json  H2_BOND_Adam_s0__d3abded94a0d.json  H2_GradientDescent_s0__99dec1d16f12.json  H2_GradientDescent_s0__e004800f1729.json  H2_GradientDescent_s0__fb64b2827425.json  H2_SSVQE_RY-CZ_GradientDescent_s0__936c8d1d2437.json  H3+_Adam_s0__2fd3a2efd512.json  H3+_bravyi_kitaev_Adam_s0__2fd3a2efd512.json  LiH_BOND_Adam_s0__1b62aea680da.json  LiH_BOND_Adam_s0__6de2883208a8.json  LiH_BOND_Adam_s0__cb1668583ccb.json  LiH_BOND_Adam_s0__cc1d997383a9.json
package tests/: test_reproducibility.py
package_tests/: __init__.py  conftest.py  test_imports.py  test_qpe_basic.py  test_reproducibility.py  test_ssvqe_general.py
qite/: __init__.py  __main__.py  core.py  engine.py  hamiltonian.py  io_utils.py  visualize.py
qpe/: __init__.py  __main__.py  core.py  hamiltonian.py  io_utils.py  noise.py  visualize.py
results/: H2_Adam_s0__14ec222f9e0d.json  H2_Adam_s0__2cd919dd162e.json  H2_Adam_s0__490ca06ea633.json  H2_Adam_s0__89b47abe0c48.json  H2_Adam_s0__c001af476312.json  H2_Adam_s0__e8e0783998e8.json  H2_Adam_s0__f48fafd86d8f.json  H2_BOND_Adam_s0__2451be0e2dde.json  H2_BOND_Adam_s0__6e989ba93b78.json  H2_BOND_Adam_s0__70630616c02a.json  H2_BOND_Adam_s0__84b4a863bea9.json  H2_BOND_Adam_s0__ad7b6f978a7d.json  H2_BOND_Adam_s0__b6e308dcd953.json  H2_BOND_Adam_s0__df8fe3c5dde5.json  H2_BOND_Adam_s0__faeb09473919.json  H2_GD_s0__1435e6b51ab8.json  H2_GradientDescent_s0__de42c6700d55.json  H2_bravyi_kitaev_Adam_s0__f65e0c5cc744.json  H2_jordan_wigner_Adam_s0__f65e0c5cc744.json  H2_parity_Adam_s0__f65e0c5cc744.json  H3+_jordan_wigner_Adam_s0__2fd3a2efd512.json  H3+_parity_Adam_s0__2fd3a2efd512.json  H3plus_SSVQE_GradientDescent_s0__3639786f26d5.json  LiH_Adam_s0__e22226e3c018.json  LiH_BOND_Adam_s0__0e63e3330bde.json  LiH_BOND_Adam_s0__50971d27c8eb.json  LiH_BOND_Adam_s0__5e14f2b1eda0.json  LiH_BOND_Adam_s0__6122a27e730f.json  LiH_BOND_Adam_s0__690463ea79ce.json  LiH_BOND_Adam_s0__72404794fb5c.json  LiH_BOND_Adam_s0__b70aa9c14723.json  LiH_BOND_Adam_s0__fb423334c209.json
scripts/: check_docs_html.py  export_benchmark_artifacts.py
src/: vqe_utils.py
tests/: conftest.py  test_adapt_smoke.py  test_benchmark_artifacts.py  test_cache_roundtrip.py  test_cli.py  test_cli_help.py  test_common_helpers.py  test_eom_qse_minimal.py  test_eom_vqe_minimal.py  test_excited_state_smoke.py  test_expert_mode.py  test_hamiltonian.py  test_lr_vqe_minimal.py  test_molecule_registry.py  test_noise_api_smoke.py  (+14 more)
(+2345 files in other folders)
