# ---- Build system ----
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# ---- Project metadata ----
[project]
name = "vqe-pennylane"
version = "0.2.0"
description = "Lightweight Quantum Simulation Suite with VQE and QPE modules (PennyLane-based)"
readme = "README.md"
authors = [{ name = "Sid Richards", email = "siddrichards@hotmail.co.uk" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pennylane>=0.42",
    "numpy",
    "matplotlib",
    "scipy",
    "openfermionpyscf"
]

[project.urls]
Homepage = "https://github.com/SidRichardsQuantum/Variational_Quantum_Eigensolver"

# ---- Packaging ----
[tool.setuptools]
packages = ["vqe", "qpe"]

[tool.setuptools.package-data]
"vqe" = ["images/*"]
"qpe" = ["images/*"]

# ---- Console entry points ----
[project.scripts]
vqe = "vqe.__main__:main"
qpe = "qpe.__main__:main"
