[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vqe-pennylane"
version = "0.2.0"
description = "Lightweight Quantum Simulation Suite with VQE and QPE modules (PennyLane-based)"
readme = "README.md"
authors = [{ name = "Sid Richards", email = "siddrichards@hotmail.co.uk" }]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pennylane>=0.42,<0.45",
    "numpy>=1.23,<2.0",
    "scipy>=1.9,<2.0",
    "matplotlib",
    "openfermion",
    "openfermionpyscf",
]

keywords = ["quantum", "VQE", "QPE", "simulation", "pennylane", "quantum-chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/SidRichardsQuantum/Variational_Quantum_Eigensolver"
Issues = "https://github.com/SidRichardsQuantum/Variational_Quantum_Eigensolver/issues"
Documentation = "https://github.com/SidRichardsQuantum/Variational_Quantum_Eigensolver#readme"

[tool.setuptools.packages.find]
include = ["vqe", "vqe.*", "qpe", "qpe.*", "vqe_qpe_common", "vqe_qpe_common.*"]

# No package-data needed (images generated at runtime)

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black",
    "flake8",
    "mypy",
    "jupyterlab",
]
docs = [
    "sphinx",
    "furo",
]

[project.scripts]
vqe = "vqe.__main__:main"
qpe = "qpe.__main__:main"
